[[release-notes-x.x.x]]
==== x.x.x (YYYY-MM-DD)

[float]
===== Breaking changes
- Breaking change

[float]
===== Deprecated
- Deprecation {pull}2526[#2526]

[float]
===== Added
- Feature {pull}2526[#2526]

[float]
===== Changed
- Change {pull}2526[#2526]

[float]
===== Fixed
- Fix {pull}2526[#2526]

[float]
[[unreleased]]
==== Unreleased
////

[[release-notes-4.x]]
=== Ruby Agent version 4.x

[[release-notes-4.0.0]]
==== 4.0.0

[float]
===== Upgrading

Be aware that this release changes the agent's general approach to instrumenting third
party libraries.
It now uses `Module#prepend` over alias method chaining.

This doesn't necessarily impact your application but it could if you are using other gems
that use the old approach to patch the same method.
Mixing the two approaches can lead to infinite recursion.

[float]
===== Removed

- Removed support for Ruby 2.3 and JRuby 9.1 {pull}901[#901]
- Config option `active`, see `enabled` {pull}900[#900]
- Config option `custom_key_filters`, see `sanitize_field_names` {pull}900[#900]
- Config option `default_tags`, see `global_labels` {pull}900[#900]
- Config option `default_labels`, see `global_labels` {pull}900[#900]
- Config option `ignore_url_patterns`, see `transaction_ignore_urls` {pull}900[#900]
- Config option `use_legacy_sql_parser`, legacy parser no longer included {pull}900[#900]

[float]
===== Changed

- Integrations (Spies) use Module#prepend over class_eval {pull}890[#890]
- The secrets filter no longer filters based on values, see `sanitize_field_names` {pull}900[#900]
- The secrets filter is aligned with other agents, see `sanitize_field_names` {pull}900[#900]

[float]
===== Added

- Added `set_service` API {pull}1006[#1006]

[float]
===== Fixed

- AWS S3 spy accepts symbol bucket names {pull}998[#998]
- AWS S3 spy passing on blocks {pull}998[#998]
- SQL scanner now recognizes CQL style comments {pull}1004[#1004]

[[release-notes-3.x]]
=== Ruby Agent version 3.x

[[release-notes-3.15.0]]